--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </a>
             <a class="u-social-url" target="_blank" data-type="Instagram" title="Contact from ianreger.com" href="mailto:contact@ianreger.com?subject=Contact%20from%20ianreger.com"><span class="u-file-icon u-icon u-social-icon u-social-instagram u-text-custom-color-1 u-icon-3"><img src="images/542689-51788b53.png" alt=""></span>
             </a>
-            <a class="u-social-url" target="_blank" data-type="Pinterest" title="Pinterest" href=""><span class="u-file-icon u-icon u-social-icon u-social-pinterest u-text-custom-color-1 u-icon-4"><img src="images/25657-032287f9.png" alt=""></span>
+            <a class="u-social-url" target="_blank" data-type="GitHub" title="GitHub" href="https://github.com/ianreger/"><span class="u-file-icon u-icon u-social-icon u-social-pinterest u-text-custom-color-1 u-icon-4"><img src="images/25657-032287f9.png" alt=""></span>
             </a>
           </div>
         </div>
@@ -83,9 +83,9 @@
             </a>
             <a class="u-social-url" title="Youtube" target="_blank" href="https://www.youtube.com/channel/UCc5fswC3CdFXMFDFkpLEngA"><span class="u-file-icon u-icon u-social-icon u-social-twitter u-icon-6"><img src="images/3670147.png" alt=""></span>
             </a>
-            <a class="u-social-url" target="_blank" data-type="Instagram" title="Contact from ianreger.com" href="mailto:contact@ianreger.com?subject=Contact%20from%20ianreger.com"><span class="u-file-icon u-icon u-social-icon u-social-instagram u-icon-7"><img src="images/542689.png" alt=""></span>
+            <a class="u-social-url" target="_blank" data-type="Email" title="Contact from ianreger.com" href="mailto:contact@ianreger.com?subject=Contact%20from%20ianreger.com"><span class="u-file-icon u-icon u-social-icon u-social-instagram u-icon-7"><img src="images/542689.png" alt=""></span>
             </a>
-            <a class="u-social-url" target="_blank" data-type="Pinterest" title="Pinterest" href=""><span class="u-file-icon u-icon u-social-icon u-social-pinterest u-icon-8"><img src="images/25657.png" alt=""></span>
+            <a class="u-social-url" target="_blank" data-type="GitHub" title="GitHub" href="https://github.com/ianreger/"><span class="u-file-icon u-icon u-social-icon u-social-pinterest u-icon-8"><img src="images/25657.png" alt=""></span>
             </a>
           </div>
         </div>
@@ -100,7 +100,7 @@
             </a>
             <a class="u-social-url" target="_blank" data-type="Instagram" title="Contact from ianreger.com" href="mailto:contact@ianreger.com?subject=Contact%20from%20ianreger.com"><span class="u-file-icon u-icon u-social-icon u-social-instagram u-text-custom-color-1 u-icon-11"><img src="images/542689-51788b53.png" alt=""></span>
             </a>
-            <a class="u-social-url" target="_blank" data-type="Pinterest" title="Pinterest" href=""><span class="u-file-icon u-icon u-social-icon u-social-pinterest u-text-custom-color-1 u-icon-12"><img src="images/25657-032287f9.png" alt=""></span>
+            <a class="u-social-url" target="_blank" data-type="GitHub" title="GitHub" href="https://github.com/ianreger/"><span class="u-file-icon u-icon u-social-icon u-social-pinterest u-text-custom-color-1 u-icon-12"><img src="images/25657-032287f9.png" alt=""></span>
             </a>
           </div>
         </div>
