--- a/Home.html
+++ b/Home.html
@@ -25,7 +25,7 @@
     <meta property="og:description" content="Welcome to my homepage. Here you will find some general information and my socials. ">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body class="u-body u-overlap u-palette-1-base u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-image u-header" id="sec-6ec6" data-image-width="1920" data-image-height="1440"><div class="u-clearfix u-sheet u-sheet-1">
+  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-overlap u-palette-1-base u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-image u-header" id="sec-6ec6" data-image-width="1920" data-image-height="1440"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="Home.html" class="u-image u-logo u-image-1" data-image-width="1938" data-image-height="2657">
           <img src="images/Reger-Logo.png" class="u-logo-image u-logo-image-1">
         </a>
@@ -70,7 +70,7 @@
             </a>
             <a class="u-social-url" target="_blank" data-type="Instagram" title="Contact from ianreger.com" href="mailto:contact@ianreger.com?subject=Contact%20from%20ianreger.com"><span class="u-file-icon u-icon u-social-icon u-social-instagram u-text-custom-color-1 u-icon-3"><img src="images/542689-51788b53.png" alt=""></span>
             </a>
-            <a class="u-social-url" target="_blank" data-type="Pinterest" title="Pinterest" href=""><span class="u-file-icon u-icon u-social-icon u-social-pinterest u-text-custom-color-1 u-icon-4"><img src="images/25657-032287f9.png" alt=""></span>
+            <a class="u-social-url" target="_blank" data-type="GitHub" title="GitHub" href="https://github.com/ianreger/"><span class="u-file-icon u-icon u-social-icon u-social-pinterest u-text-custom-color-1 u-icon-4"><img src="images/25657-032287f9.png" alt=""></span>
             </a>
           </div>
         </div>
@@ -83,9 +83,9 @@
             </a>
             <a class="u-social-url" title="Youtube" target="_blank" href="https://www.youtube.com/channel/UCc5fswC3CdFXMFDFkpLEngA"><span class="u-file-icon u-icon u-social-icon u-social-twitter u-icon-6"><img src="images/3670147.png" alt=""></span>
             </a>
-            <a class="u-social-url" target="_blank" data-type="Instagram" title="Contact from ianreger.com" href="mailto:contact@ianreger.com?subject=Contact%20from%20ianreger.com"><span class="u-file-icon u-icon u-social-icon u-social-instagram u-icon-7"><img src="images/542689.png" alt=""></span>
+            <a class="u-social-url" target="_blank" data-type="Email" title="Contact from ianreger.com" href="mailto:contact@ianreger.com?subject=Contact%20from%20ianreger.com"><span class="u-file-icon u-icon u-social-icon u-social-instagram u-icon-7"><img src="images/542689.png" alt=""></span>
             </a>
-            <a class="u-social-url" target="_blank" data-type="Pinterest" title="Pinterest" href=""><span class="u-file-icon u-icon u-social-icon u-social-pinterest u-icon-8"><img src="images/25657.png" alt=""></span>
+            <a class="u-social-url" target="_blank" data-type="GitHub" title="GitHub" href="https://github.com/ianreger/"><span class="u-file-icon u-icon u-social-icon u-social-pinterest u-icon-8"><img src="images/25657.png" alt=""></span>
             </a>
           </div>
         </div>
@@ -100,7 +100,7 @@
             </a>
             <a class="u-social-url" target="_blank" data-type="Instagram" title="Contact from ianreger.com" href="mailto:contact@ianreger.com?subject=Contact%20from%20ianreger.com"><span class="u-file-icon u-icon u-social-icon u-social-instagram u-text-custom-color-1 u-icon-11"><img src="images/542689-51788b53.png" alt=""></span>
             </a>
-            <a class="u-social-url" target="_blank" data-type="Pinterest" title="Pinterest" href=""><span class="u-file-icon u-icon u-social-icon u-social-pinterest u-text-custom-color-1 u-icon-12"><img src="images/25657-032287f9.png" alt=""></span>
+            <a class="u-social-url" target="_blank" data-type="GitHub" title="GitHub" href="https://github.com/ianreger/"><span class="u-file-icon u-icon u-social-icon u-social-pinterest u-text-custom-color-1 u-icon-12"><img src="images/25657-032287f9.png" alt=""></span>
             </a>
           </div>
         </div>
@@ -114,16 +114,5 @@
         <p class="u-custom-font u-font-ubuntu u-small-text u-text u-text-variant u-text-1">WEBSITE EST. 2021<br>v3
         </p>
       </div></footer>
-    <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
-        <span>Website Templates</span>
-      </a>
-      <p class="u-text">
-        <span>created with</span>
-      </p>
-      <a class="u-link" href="" target="_blank">
-        <span>Website Builder Software</span>
-      </a>. 
-    </section>
   
 </body></html>
